# maptoposter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cli.py  docker-compose.dev.yml  docker-compose.yml  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  requirements.txt  test_api.py  test_generation.py  test_ui.js
api/: __init__.py  main.py
api/routes/: jobs.py  locations.py  posters.py  themes.py
api/schemas/: poster.py
docs/: RUST_REWRITE_PLAN.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
maptoposter-rs/: Cargo.toml  Dockerfile  MEMORY_OPTIMIZATION.md  README.md  docker-compose.yml
maptoposter-rs/src/: config.rs  error.rs  main.rs
maptoposter-rs/src/api/: models.rs  state.rs
maptoposter-rs/src/api/handlers/: health.rs  jobs.rs  locations.rs  mod.rs  posters.rs  themes.rs
maptoposter-rs/src/core/: geocoding.rs  mod.rs  osm_client.rs  poster_generator.rs  progress.rs  rate_limiter.rs
maptoposter-rs/src/rendering/: canvas.rs  gradients.rs  mod.rs  road_styles.rs  typography.rs
maptoposter-rs/src/themes/: loader.rs
scripts/: deploy-railway.sh
src/maptoposter/: __init__.py  config.py  exceptions.py  logging_config.py
src/maptoposter/core/: __init__.py  geocoding.py  poster_generator.py
src/maptoposter/rendering/: __init__.py  gradients.py  road_styles.py  typography.py
src/maptoposter/themes/: __init__.py  loader.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_poster_generator.py  test_themes.py
themes/: arctic.json  concrete.json  coral.json  desert.json  electric_blue.json  emerald.json  gold.json  lavender.json  mint.json  mocha.json  neon_pink.json  platinum.json  rose_gold.json  ruby.json  sage.json  sapphire.json  sepia.json  vintage_paper.json
