[project]
name = "maptoposter"
version = "2.0.0"
description = "Generate beautiful, minimalist city map posters"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ankur Gupta" }
]
requires-python = ">=3.10"
keywords = ["maps", "posters", "openstreetmap", "visualization", "cities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    # Core map generation
    "osmnx>=2.0.0",
    "matplotlib>=3.8.0",
    "geopy>=2.4.0",
    "geopandas>=1.0.0",
    "numpy>=2.0.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    # API framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
    "rq>=1.16.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
maptoposter = "cli:main"

[project.urls]
Homepage = "https://github.com/N3mes1s/maptoposter"
Repository = "https://github.com/N3mes1s/maptoposter"
Issues = "https://github.com/N3mes1s/maptoposter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maptoposter"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
